Исправил баги запросов и ответов в сервисе auth
